--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ sites/*/private
 files/*
 .idea
 settings.local.php
+settings.hosting.php
 
 # Pantheon commits a settings.php for environment-specific settings.
 # Place local settings in settings.local.php
